[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adasam"
version = "0.1.0"
description = "MobileSAM-based Few-shot Aerial Instance Segmentation with Adaptive Sparse Computation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
    "torch>=2.0",
    "torchvision",
    "timm>=0.9",          # TinyViT image encoder (MobileSAM)
    "numpy",
    "opencv-python",
    "pycocotools",
    "pyyaml",
    "scipy",              # Hungarian matching (linear_sum_assignment)
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

# `adasam` is the importable package. The MobileSAM backbone is vendored under
# thirdparty/MobileSAM/ and added to sys.path at runtime by adasam.backbone
# (mirrors the frozen-third-party pattern), so it is NOT declared as a package here.
[tool.setuptools.packages.find]
include = ["adasam*"]
exclude = ["thirdparty*", "tests*", "tools*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
